# asciigraph

./: Cargo.toml  README.md
src/: alignment.rs  color.rs  convert.rs  error.rs  format.rs  graph.rs  histogram.rs  interval.rs  json.rs  lib.rs  lines.rs  main.rs  merge.rs  skip_value.rs  table.rs  testbench.rs  utils.rs
src/graph/: merge.rs  setters.rs
