[package]
name = "asciigraph"
version = "0.9.3"
edition = "2021"
description = "Ascii Graph"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asciibox = "0.1.0"
clap = { version = "4.5.9", features = ["derive"] }
hmath = "0.1.17"
json = { version = "0.12.4", optional = true }
lazy_static = "1.4.0"

[features]
default = ["json"]
json = ["dep:json"]
